@@ -19,6 +19,7 @@ namespace CIAO
         void parse_args (int argc, ACE_TCHAR **argv);
 
         ACE_TString filename_;
+        ACE_TString backend_;
         bool trace_;
       };
   }
